--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
     <main class="wrapper">
         <h1>Hello World</h1>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Numquam porro, soluta dolore necessitatibus nobis ex ut reprehenderit culpa totam officia, harum asperiores mollitia consectetur cum possimus commodi excepturi dolorem? Autem!</p>
+        <button id="showModal" type="button">Show Modal</button>
     </main>
-    <div id="overlay" class="overlay visible">
+    <div id="overlay" class="overlay">
         <div id="modal" class="modal">
             <h1>Hello, I am a Modal!</h1>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deleniti maiores cum sapiente in voluptas doloribus eaque tempora.</p>
-            <button class="close">X</button>
+            <button id="closeModal" class="close" type="button">X</button>
         </div>
     </div>
 </body>
+<script src="js/index.js"></script>
 </html>
